--- a/App/sms-application/Client/scholership_portal_client/package.json
+++ b/App/sms-application/Client/scholership_portal_client/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.8.2",
     "bootstrap": "^5.3.3",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-chartjs-2": "^5.3.0",
