--- a/App/sms-application/Client/scholership_portal_client/package.json
+++ b/App/sms-application/Client/scholership_portal_client/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.4.8",
+    "@mui/x-data-grid": "^7.28.1",
     "@mui/x-date-pickers": "^7.28.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
